Flash: Import German translations
Change-Id: I51970ff042932447df36ea09b7c9c53a96fcc89f
Signed-off-by: NurKeinNeid <mralexman3000@gmail.com>

--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -69,4 +69,7 @@
     <string name="location_permission_dialog_description">Füge jeder Aufnahme Standort-Metadaten hinzu, um deine Erinnerungen zuzuordnen.</string>
     <string name="location_permission_dialog_later">Später</string>
     <string name="location_permission_dialog_turn_on">Einschalten</string>
+    <string name="camera_mode_photo">Foto</string>
+    <string name="camera_mode_video">Video</string>
+    <string name="camera_mode_qr">Scan</string>
 </resources>
